--- a/final.yaml
+++ b/final.yaml
@@ -1,4 +1,27 @@
 payload:
-  - DOMAIN-SUFFIX,91porn.com
-  - DOMAIN-SUFFIX,raw.githubusercontent.com
-  - DOMAIN-KEYWORD,1password
+  -  DOMAIN-SUFFIX,me.com
+  -  DOMAIN-SUFFIX,twimg.com
+  -  DOMAIN-SUFFIX,gmail.com
+  -  DOMAIN-SUFFIX,youtube.com
+  -  DOMAIN-SUFFIX,googlevideo.com
+  -  DOMAIN-SUFFIX,ggpht.com
+  -  DOMAIN-SUFFIX,google.com
+  -  DOMAIN-SUFFIX,i.ytimg.com
+  -  DOMAIN-SUFFIX,cloudflare.com
+  -  DOMAIN-SUFFIX,t.me
+  -  DOMAIN-SUFFIX,raw.githubusercontent.com
+  -  DOMAIN-SUFFIX,github.githubassets.com
+  -  DOMAIN-SUFFIX,binance.com
+  -  DOMAIN-SUFFIX,binance.info
+  -  DOMAIN-SUFFIX,91porn.com
+  -  DOMAIN-SUFFIX,static.xx.fbcdn.net
+  -  DOMAIN-SUFFIX,pornhub.com
+  -  DOMAIN-SUFFIX,v2ex.com
+  -  DOMAIN-SUFFIX,emby.ilmz.net
+  -  DOMAIN-SUFFIX,emby.wtf
+  -  DOMAIN-SUFFIX,binance.com
+  -  DOMAIN-SUFFIX,saasexch.io
+  -  DOMAIN-SUFFIX,bnbstatic.com
+  -  DOMAIN-SUFFIX,googleapis.com
+  -  DOMAIN-SUFFIX,forter.com
+  -  DOMAIN-SUFFIX,bntrace.com
